# enlaight

./: .gitignore  INTEGRATIONS.md  Makefile  README.md  create_defaults.sh  docker-compose-dev.yml  docker-compose.yml  env.sample  openapi.yml  populate_db.sh
backend/: .gitignore  .pre-commit-config.yaml  Dockerfile  populate_db.py  pyproject.toml
backend/docs/: kb-access.md
backend/mysql/init/: 01-init-databases.sql  set_admin.sql
backend/scripts/: debug_get_project.py  entrypoint.sh  run.sh  wait-for-mysql.sh
backend/src/authentication/: debug_auth.py  permissions.py  urls.py  utils.py
backend/src/authentication/migrations/: 0001_create_user_profile.py  0002_update_invite.py  0003_reset_password.py  0004_add_new_tables.py  0005_add_client_fk_to_projects.py  0006_fix_updated_at_behavior.py  0007_add_project_fk_to_boards.py  0008_add_user_table.py  0009_add_bots.py  0010_update_base.py  0011_add_bots_m2m_to_projects.py  0012_add_expertise_area.py  0013_expertise_area_to_bots.py  0014_add_user_project_m2m.py  0015_alter_boards_active_alter_bots_active_and_more.py  0016_fix_user.py  0018_i18n_translation.py  0019_alter_translation_source_text.py  0020_sync_models.py  0022_add_project_to_invite.py  0022_refactor_db.py  0023_projectsagentsthrough_alter_projects_agents_and_more.py  0024_add_kb.py  0025_fix_agents_expertise_area_column.py  0026_add_client_id_boards.py  0027_add_project_to_invite.py  0028_fix_projects_bots_uuid_len.py  0029_fix_projects_bots_fk.py  0030_add_chat_sessions.py  (+6 more)
backend/src/core/: settings.py  settings.sample.py  urls.py  views.py
(+276 files in other folders)
